; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_ps3_ctx.c_gfx_ctx_ps3_init.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_ps3_ctx.c_gfx_ctx_ps3_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_15__ = type { %struct.TYPE_14__ }
%struct.TYPE_14__ = type { %struct.TYPE_13__ }
%struct.TYPE_13__ = type { i32, i64, %struct.TYPE_12__ }
%struct.TYPE_12__ = type { %struct.TYPE_11__ }
%struct.TYPE_11__ = type { i64 }

@CELL_VIDEO_OUT_PRIMARY = common dso_local global i32 0, align 4
@CELL_VIDEO_OUT_RESOLUTION_576 = common dso_local global i32 0, align 4
@CELL_VIDEO_OUT_ASPECT_AUTO = common dso_local global i32 0, align 4
@GL_ARGB_SCE = common dso_local global i32 0, align 4
@GL_FALSE = common dso_local global i32 0, align 4
@GL_MULTISAMPLING_NONE_SCE = common dso_local global i32 0, align 4
@GL_NONE = common dso_local global i32 0, align 4
@PSGL_DEVICE_PARAMETERS_COLOR_FORMAT = common dso_local global i32 0, align 4
@PSGL_DEVICE_PARAMETERS_DEPTH_FORMAT = common dso_local global i32 0, align 4
@PSGL_DEVICE_PARAMETERS_MULTISAMPLING_MODE = common dso_local global i32 0, align 4
@PSGL_DEVICE_PARAMETERS_RESC_PAL_TEMPORAL_MODE = common dso_local global i32 0, align 4
@PSGL_DEVICE_PARAMETERS_RESC_RATIO_MODE = common dso_local global i32 0, align 4
@PSGL_DEVICE_PARAMETERS_WIDTH_HEIGHT = common dso_local global i32 0, align 4
@PSGL_INIT_INITIALIZE_SPUS = common dso_local global i32 0, align 4
@PSGL_INIT_MAX_SPUS = common dso_local global i32 0, align 4
@RESC_PAL_TEMPORAL_MODE_60_INTERPOLATE = common dso_local global i32 0, align 4
@RESC_RATIO_MODE_FULLSCREEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*)* @gfx_ctx_ps3_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @gfx_ctx_ps3_init(i32* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_15__*, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = call %struct.TYPE_15__* (...) @global_get_ptr()
  store %struct.TYPE_15__* %8, %struct.TYPE_15__** %6, align 8
  %9 = call i64 @calloc(i32 1, i32 1)
  %10 = inttoptr i64 %9 to i8*
  store i8* %10, i8** %7, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %27

16:                                               ; preds = %2
  %17 = load i32, i32* @CELL_VIDEO_OUT_PRIMARY, align 4
  %18 = load i32, i32* @CELL_VIDEO_OUT_RESOLUTION_576, align 4
  %19 = load i32, i32* @CELL_VIDEO_OUT_ASPECT_AUTO, align 4
  %20 = call i32 @cellVideoOutGetResolutionAvailability(i32 %17, i32 %18, i32 %19, i32 0)
  %21 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %23, i32 0, i32 0
  store i32 %20, i32* %24, align 8
  %25 = call i32 (...) @gfx_ctx_ps3_get_available_resolutions()
  %26 = load i8*, i8** %7, align 8
  store i8* %26, i8** %3, align 8
  br label %27

27:                                               ; preds = %16, %15
  %28 = load i8*, i8** %3, align 8
  ret i8* %28
}

declare dso_local %struct.TYPE_15__* @global_get_ptr(...) #1

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local i32 @cellVideoOutGetResolutionAvailability(i32, i32, i32, i32) #1

declare dso_local i32 @gfx_ctx_ps3_get_available_resolutions(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
